--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@
     color: var(--text-color);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--bg-color);
     display: flex;
@@ -76,15 +80,17 @@ button {
 }
 
 .bar-border {
-    width: 200px;
+    width: 100%;
     height: 20px;
-    border: 1px solid var(--border-color);
+    border: none;
     border-radius: 3px;
-    margin: 30px;
+    margin: 30px 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 .bar-progress {
-    width: 70%;
+    width: 50%;
     height: 100%;
     background-color: var(--accent-color);
 }
@@ -119,6 +125,12 @@ footer {
     padding: 20px;
     margin-top: auto;
     border-top: 1px solid var(--border-color);
+}
+
+.progress-text {
+    margin-left: 10px; /* Space between progress bar and text */
+    color: var(--text-color);
+    font-weight: bold;
 }
 
 /* Hover effects */
